创建监听函数

--- a/v-model/index.html
+++ b/v-model/index.html
@@ -11,6 +11,17 @@
         <span>hehe</span>
     </div>
     <script src="./index.js"></script>
+    <script>
+        const vm = new Vue({
+            el: '#app',
+            data: {
+                name: '小花',
+                more: {
+                    like: '百步传扬'
+                }
+            }
+        })
+    </script>
     
 </body>
 </html>
