--- a/v-model/index.html
+++ b/v-model/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="app">
-        <span>hehe</span>
+        <span>姓名: {{ name }}</span>
+        <input type="text" v-model="name">
+        <span>更多: {{ more.like }}</span>
+        <input type="text" v-model="more.like">
     </div>
     <script src="./index.js"></script>
     <script>
