这是chuwx的新功能

--- a/position.html
+++ b/position.html
@@ -38,7 +38,7 @@
         hehe()
         var div = document.querySelector('div')
         div.onclick = function (e) {
-            console.log(e)
+            console.log(e) // 这是我在 chuwxx 上提交的代码
         }
     </script>
     
