主分支添加了方法

--- a/position.html
+++ b/position.html
@@ -38,7 +38,7 @@
         hehe()
         var div = document.querySelector('div')
         div.onclick = function (e) {
-            console.log(e)
+            console.log(e) // 这是主分支 上新添加的公共方法
         }
     </script>
     
