chuwx 添加新功能

--- a/position.html
+++ b/position.html
@@ -28,17 +28,17 @@
     }
 </style>
 <body>
-    <div class="box"></div>
-    <script>
-        var hehe = function (edge) {
-            console.log(edge) // undifined
+    <div class="box"></div>  // chuwx
+    <script>   // chuwx
+        var hehe = function (edge) {   // chuwx
+            console.log(edge) // undifined  // chuwx
             console.log(this) // window
 
-        }
-        hehe()
+        } 
+        hehe()  // chuwx
         var div = document.querySelector('div')
         div.onclick = function (e) {
-            console.log(e) // 这是我在 chuwxx 上提交的代码
+            console.log(e) // 这是我在 chuwxx 上提交的代码   // chuwx
         }
     </script>
     
