--- a/echarts/index.html
+++ b/echarts/index.html
@@ -54,19 +54,51 @@
 
             },
 
+            // 图案颜色
+            color: ["#003366", "green", "#006699"],
+
+            // 数据
             
+
+
+            // legend  图例
+            legend: {
+                data: ['图例1', '图例2', '图例3'],
+                type: 'plain', // plain 普通图例  scroll 可滚动翻页的图例
+                show: true
+
+
+            },
+
+            // x轴
             xAxis: {
+                name: '',
                 type: 'category',
                 data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun','Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun','Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
             },
+
+            // y轴
             yAxis: {
                 type: 'value'
             },
+
+            
             series: [
                 {
-                data: [120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130],
-                type: 'bar'
-                }
+                    name: '图例1',
+                    data: [120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130],
+                    type: 'bar'
+                },
+                {
+                    name: '图例2',
+                    data: [120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130],
+                    type: 'bar'
+                },
+                {
+                    name: '图例3',
+                    data: [120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130,120, 200, 150, 80, 70, 110, 130],
+                    type: 'bar'
+                },
             ]
             };
 
