--- a/test/test-01.html
+++ b/test/test-01.html
@@ -83,6 +83,9 @@
         const arr = document.querySelectorAll('.main')
         arr.forEach(item => item.innerHTML = str1)
 
+
+        console.log('这是chery-pick')
+
         
 
 
