--- a/vue源码/66363.html
+++ b/vue源码/66363.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    66666666667777
+    <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
+    <script>
+        new Vue({
+            data:{
+                company: {
+                    name: '拉钩',
+                    address: '中关村创业打野嗨喽4吃晚饭呢'
+                }
+            },
+            render(h) {
+                return h('div', [
+                    h('p', '公司名称:' + this.company.name),
+                    h('p', '公司地址:' + this.company.address),
+                ])
+            }
+        }).$mount('#app')
+    </script>
     
 </body>
 </html>
